added professor's name on the title page

--- a/frontback/titlepage.tex
+++ b/frontback/titlepage.tex
@@ -16,8 +16,10 @@
         \myDepartment \\                            
         \myUni \\ 
 				\myLocation \\ \bigskip
-				\myTime
 				\vfill
+				Advisor: \myProf
+				\vfill
+				\myTime
     \end{center}  
   \end{addmargin}       
 \end{titlepage}   
