added parts and chapters

--- a/thesis.tex
+++ b/thesis.tex
@@ -21,14 +21,26 @@
 
 \cleardoublepage
 \ctparttext{You can put some informational part preamble text here}
-\part{Some Kind of Manual}
-\include{chapters/chapter1}
+\part{Introduction}
+\include{chapters/introduction/contiki}
+\include{chapters/introduction/coap}
+\include{chapters/introduction/webdav}
 
 \cleardoublepage
 \ctparttext{You can put some informational part preamble text here}
-\part{The Showcase}
-\include{chapters/chapter2}
-\include{chapters/chapter3}
+\part{State of the Art}
+\include{chapters/state-of-the-art/contiki}
+\include{chapters/state-of-the-art/coap}
+\include{chapters/state-of-the-art/webdav}
+
+\cleardoublepage
+\ctparttext{You can put some informational part preamble text here}
+\part{Implementation and Evaluation}
+\include{chapters/implementation-and-evaluation/design}
+\include{chapters/implementation-and-evaluation/implementation}
+\include{chapters/implementation-and-evaluation/performance-evaluation}
+\include{chapters/implementation-and-evaluation/future-work}
+\include{chapters/implementation-and-evaluation/conclusion}
 
 \appendix
 \cleardoublepage
