changed the topic from webdav to flowy; renamed the chapters

--- a/frontback/titlepage.tex
+++ b/frontback/titlepage.tex
@@ -5,7 +5,7 @@
         \hfill
         \vfill
         \begingroup
-            \color{Maroon}\spacedallcaps{\Huge{\myTitle}} \\ \bigskip
+            \color{Magenta}\spacedallcaps{\Huge{\myTitle}} \\ \bigskip
         		\color{Black}\mySubtitle \\ \bigskip
         \endgroup
 				\vfill
@@ -17,8 +17,8 @@
         \myUni \\ 
 				\myLocation \\ \bigskip
 				\vfill
-				Advisor: \myProf
-				\vfill
+				% Advisor: \myProf
+				% \vfill
 				\myTime
     \end{center}  
   \end{addmargin}       
