--- a/thesis-preamble.sty
+++ b/thesis-preamble.sty
@@ -8,9 +8,9 @@
 % ********************************************************************
 % Re-usable information
 % ********************************************************************
-\newcommand{\myTitle}{WebDAV over CoAP\xspace}
-\newcommand{\mySubtitle}{Read/Write Web using Resource
- 												 Constrained Devicess\xspace}
+\newcommand{\myTitle}{F\xspace}
+\newcommand{\mySubtitle}{A complete system integration of 
+												 stream-based IP flow-record querier\xspace}
 \newcommand{\myDegree}{Masters Thesis\xspace}
 \newcommand{\myName}{Vaibhav Bajpai\xspace}
 \newcommand{\myProf}{Prof. Dr. J\"urgen Sch\"onw\"alder \xspace}
