added motivation and work plan parts

--- a/thesis.tex
+++ b/thesis.tex
@@ -28,12 +28,23 @@
 \include{chapters/introduction/legal-consideration}
 
 \cleardoublepage
+\part{Motivation}
+
+\cleardoublepage
 \ctparttext{You can put some informational part preamble text here}
 \part{State of the Art}
 \include{chapters/state-of-the-art/flowy}
 \include{chapters/state-of-the-art/flowy-mapreduce}
 \include{chapters/state-of-the-art/flowy-2}
 \include{chapters/state-of-the-art/flowy-applications}
+
+\cleardoublepage
+\ctparttext{You can put some informational part preamble text here}
+\part{Work Plan}
+\include{chapters/plan/design}
+\include{chapters/plan/implementation}
+\include{chapters/plan/performance-evaluation}
+\include{chapters/plan/conclusion}
 
 \cleardoublepage
 \ctparttext{You can put some informational part preamble text here}
