removed colophon and acknoledgements from thesis.tex, added vmarinov and kkanov papers in bib

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,70 +1,75 @@
-@BOOK{sommerville:1992,
-    Address        = {Boston, MA, USA},
-    Author         = {Ian Sommerville},
-    Edition        = {4th},
-    Publisher      = {Addison-Wesley},
-    Title          = {{S}oftware {E}ngineering},
-    Year           = {1992}
+@inproceedings{kkanev:2010,
+ author = {Kanev, Kaloyan and Melnikov, Nikolay and 
+		   Sch\"{o}nw\"{a}lder, J\"{u}rgen},
+ title = {{Implementation of a stream-based IP flow record query language}},
+ booktitle = {Proceedings of the Mechanisms for autonomous management of 
+			  networks and services, and 4th international conference on 
+			  Autonomous infrastructure, management and security},
+ series = {AIMS'10},
+ year = {2010},
+ isbn = {3-642-13985-X, 978-3-642-13985-7},
+ location = {Zurich, Switzerland},
+ pages = {147--158},
+ numpages = {12},
+ url = {http://dl.acm.org/citation.cfm?id=1875873.1875900},
+ acmid = {1875900},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {flow query language, netflow, network monitoring},
+} 
+
+@mastersthesis{kkanev:thesis:2009,
+ author = {Kanev, Kaloyan},
+ title = {{Flowy - Network Flow Analysis Application}},
+ school = {Jacobs University Bremen},
+ address = {Campus Ring 1, 28759 Bremen, Germany},
+ year = {2009},
 }
 
-@ARTICLE{knuth:1974,
-    Address        = {New York, NY, USA},
-    Author         = {Knuth, Donald E.},
-    Journal        = {Communications of the ACM},
-    Month          = {December },
-    Number         = {12},
-    Pages          = {667--673},
-    Publisher      = {ACM Press},
-    Title          = {{C}omputer {P}rogramming as an {A}rt},
-    Volume         = {17},
-    Year           = {1974}
+@mastersthesis{vmarinov:thesis:2009,
+ author = {Marinov, Vladislav},
+ title = {{Design of an IP Flow Record Query Language}},
+ school = {Jacobs University Bremen},
+ address = {Campus Ring 1, 28759 Bremen, Germany},
+ year = {2009},
 }
 
-@BOOK{bentley:1999,
-    Address        = {Boston, MA, USA},
-    Author         = {Jon Bentley},
-    Edition        = {2nd},
-    Publisher      = {Addison--Wesley},
-    Title          = {{P}rogramming {P}earls},
-    Year           = {1999}
-}
+@inproceedings{vmarinov:2009,
+ author = {Marinov, Vladislav and Sch\"{o}nw\"{a}lder, J\"{u}rgen},
+ title = {{Design of a Stream-Based IP Flow Record Query Language}},
+ booktitle = {Proceedings of the 20th IFIP/IEEE International Workshop on 
+			  Distributed Systems: Operations and Management: Integrated 
+			  Management of Systems, Services, Processes and People in IT},
+ series = {DSOM '09},
+ year = {2009},
+ isbn = {978-3-642-04988-0},
+ location = {Venice, Italy},
+ pages = {15--28},
+ numpages = {14},
+ url = {http://dx.doi.org/10.1007/978-3-642-04989-7_2},
+ doi = {http://dx.doi.org/10.1007/978-3-642-04989-7_2},
+ acmid = {1692702},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {IPFIX, NetFlow, Network measurement},
+} 
 
-
-@ARTICLE{knuth:1976,
-    Address        = {New York, NY, USA},
-    Author         = {Knuth, Donald E.},
-    Journal        = {SIGACT News},
-    Month          = {April/June},
-    Number         = {2},
-    Pages          = {18--24},
-    Publisher      = {ACM Press},
-    Title          = {{B}ig {O}micron and {B}ig {O}mega and {B}ig {T}heta},
-    Volume         = {8},
-    Year           = {1976}
-}
-
-@BOOK{cormen:2001,
-    Address        = {Cambridge, MA, USA},
-    Author         = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Clifford Stein},
-    Edition        = {2nd},
-    Publisher      = {The MIT Press},
-    Title          = {{I}ntroduction to {A}lgorithms},
-    Year           = {2001}
-}
-
-@BOOK{dueck:trio,
-    Author         = {Gunter Dueck},
-    Note           = {\url{http://www.omnisophie.com}},
-    Publisher      = {Springer, Berlin},
-    Title          = {Dueck's Trilogie: Omnisophie -- Supramanie -- Topothesie},    
-    Year           = {2005},
-}
-
-@BOOK{bringhurst:2002,
-	Address        = {Point Roberts, WA, USA},
-	Author         = {Robert Bringhurst},
-    Publisher      = {Hartley \& Marks, Publishers},
-    Series         = {Version 2.5},
-	Title          = {The Elements of Typographic Style},
-	Year           = {2002},
+@inproceedings{vmarinov:2008,
+ author = {Marinov, Vladislav and Sch\"{o}nw\"{a}lder, J\"{u}rgen},
+ title = {{Design of an IP Flow Record Query Language}},
+ booktitle = {Proceedings of the 2nd international conference on Autonomous
+ 			  Infrastructure, Management and Security: Resilient Networks and
+ 			  Services},
+ series = {AIMS '08},
+ year = {2008},
+ isbn = {978-3-540-70586-4},
+ location = {Bremen, Germany},
+ pages = {205--210},
+ numpages = {6},
+ url = {http://dx.doi.org/10.1007/978-3-540-70587-1_20},
+ doi = {http://dx.doi.org/10.1007/978-3-540-70587-1_20},
+ acmid = {1428087},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {IPFIX, NetFlow, network traffic analysis, query language},
 }
