completed flowy introduction, about to start writing on each stage element

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -73,3 +73,17 @@
  address = {Berlin, Heidelberg},
  keywords = {IPFIX, NetFlow, network traffic analysis, query language},
 }
+
+@misc{rfc5102,
+  author="J. Quittek and S. Bryant and B. Claise and P. Aitken and J. Meyer",
+  title="{Information Model for IP Flow Information Export}",
+  series="Request for Comments",
+  number="5102",
+  howpublished="RFC 5102 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2008,
+  month=jan,
+  note="Updated by RFC 6313",
+  url="http://www.ietf.org/rfc/rfc5102.txt",
+}
