--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -65,9 +65,7 @@
     \markboth{\spacedlowsmallcaps{Acronyms}}{\spacedlowsmallcaps{Acronyms}}
     \chapter*{Acronyms}
     \begin{acronym}[UML]
-        \acro{DRY}{Don't Repeat Yourself}
-        \acro{API}{Application Programming Interface}
-        \acro{UML}{Unified Modeling Language}
+        \acro{IPFIX}{Internet Protocol Flow Information Export}
     \end{acronym}                     
 \endgroup
 
