completed group-filter, merger, ungrouper, pytables and ply, records

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -76,7 +76,7 @@
 
 @misc{rfc5102,
   author="J. Quittek and S. Bryant and B. Claise and P. Aitken and J. Meyer",
-  title="{Information Model for IP Flow Information Export}",
+  title="{{Information Model for IP Flow Information Export}}",
   series="Request for Comments",
   number="5102",
   howpublished="RFC 5102 (Proposed Standard)",
@@ -86,4 +86,44 @@
   month=jan,
   note="Updated by RFC 6313",
   url="http://www.ietf.org/rfc/rfc5102.txt",
+}
+
+@misc{rfc3954,
+  author="B. Claise",
+  title="{{Cisco Systems NetFlow Services Export Version 9}}",
+  series="Request for Comments",
+  number="3954",
+  howpublished="RFC 3954 (Informational)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2004,
+  month=oct,
+  url="http://www.ietf.org/rfc/rfc3954.txt",
+}
+
+@article{falted:2003,
+ author = {Francesc Alted and Mercedes Fernández-Alonso},
+ title = {{PyTables: Processing And Analyzing Extremely Large Amounts Of Data In 
+		  Python}},
+ year = {2003}
+}
+
+@article{fallen:1983,
+ author = {Allen, James F.},
+ title = {{Maintaining knowledge about temporal intervals}},
+ journal = {Communications of the ACM},
+ issue_date = {Nov. 1983},
+ volume = {26},
+ issue = {11},
+ month = {November},
+ year = {1983},
+ issn = {0001-0782},
+ pages = {832--843},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/182.358434},
+ doi = {http://doi.acm.org/10.1145/182.358434},
+ acmid = {358434},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {interval reasoning, interval representation, temporal interval},
 }
