--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -66,6 +66,9 @@
     \chapter*{Acronyms}
     \begin{acronym}[UML]
         \acro{IPFIX}{Internet Protocol Flow Information Export}
+        \acro{HDF}{Hierarchical Data Format}
+		\acro{LALR}{Look-Ahead LR Parser}
+		\acro{PLY}{Python Lex-Yacc}
     \end{acronym}                     
 \endgroup
 
