using CM typewriter instead of bera mono

--- a/thesis-preamble.sty
+++ b/thesis-preamble.sty
@@ -28,7 +28,7 @@
 % Configure thesis for your needs here...
 % ******************************************************************** 
 \PassOptionsToPackage{eulerchapternumbers,drafting,listings,%linedheaders,%pdfspacing,%listings,
-subfig,beramono,eulermath,parts, dottedtoc}{thesis}
+subfig,eulermath,parts, dottedtoc}{thesis}
 %*******************************************************
 % Options for thesis.sty:
 % tocaligned eulerchapternumbers drafting linedheaders listings
