added flowy-map/reduce introduction and outline

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,13 @@
+@mastersthesis{pnemeth:thesis:2010,
+ author = {Nemeth, Peter},
+ title = {{Flowy Improvements using Map/Reduce}},
+ type = {Bachelor's Thesis},
+ month = {May},
+ school = {Jacobs University Bremen},
+ address = {Campus Ring 1, 28759 Bremen, Germany},
+ year = {2010},
+}
+
 @inproceedings{kkanev:2010,
  author = {Kanev, Kaloyan and Melnikov, Nikolay and 
 		   Sch\"{o}nw\"{a}lder, J\"{u}rgen},
@@ -21,6 +31,7 @@
 @mastersthesis{kkanev:thesis:2009,
  author = {Kanev, Kaloyan},
  title = {{Flowy - Network Flow Analysis Application}},
+ month = {August},
  school = {Jacobs University Bremen},
  address = {Campus Ring 1, 28759 Bremen, Germany},
  year = {2009},
@@ -29,6 +40,7 @@
 @mastersthesis{vmarinov:thesis:2009,
  author = {Marinov, Vladislav},
  title = {{Design of an IP Flow Record Query Language}},
+ month = {August},
  school = {Jacobs University Bremen},
  address = {Campus Ring 1, 28759 Bremen, Germany},
  year = {2009},
