added map/reduce frameworks and parallelizing flowy introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,46 @@
+@inproceedings{pmundkur:2011,
+ author = {Mundkur, Prashanth and Tuulos, Ville and Flatow, Jared},
+ title = {{Disco: A Computing Platform for Large-Scale Data Analytics}},
+ booktitle = {Proceedings of the 10th ACM SIGPLAN workshop on Erlang},
+ series = {Erlang '11},
+ year = {2011},
+ isbn = {978-1-4503-0859-5},
+ location = {Tokyo, Japan},
+ pages = {84--89},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/2034654.2034670},
+ doi = {http://doi.acm.org/10.1145/2034654.2034670},
+ acmid = {2034670},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {MapReduce, cluster, data processing, distributed filesystems},
+}
+
+@book{twhite:hadoop:2010,
+  title={{Hadoop: The Definitive Guide}},
+  author={White, T.},
+  isbn={9781449389734},
+  series={Definitive Guide Series},
+  url={http://books.google.co.in/books?id=Nff49D7vnJcC},
+  year={2010},
+  publisher={O'Reilly}
+}
+
+@inproceedings{kshvachko:2010,
+author={Shvachko, K. and Hairong Kuang and Radia, S. and Chansler, R.}, 
+booktitle={Mass Storage Systems and Technologies (MSST), 2010 IEEE 26th
+ 					 Symposium on}, 
+title={{The Hadoop Distributed File System}}, 
+year={2010}, 
+month={May}, 
+volume={}, 
+number={}, 
+pages={1 -10}, 
+keywords={Hadoop distributed file system;Yahoo!;data storage;data stream;enterprise data;Internet;distributed databases;network operating systems;}, 
+doi={10.1109/MSST.2010.5496972}, 
+ISSN={},
+}
+
 @mastersthesis{pnemeth:thesis:2010,
  author = {Nemeth, Peter},
  title = {{Flowy Improvements using Map/Reduce}},
@@ -99,6 +142,20 @@
   note="Updated by RFC 6313",
   url="http://www.ietf.org/rfc/rfc5102.txt",
 }
+
+@inproceedings{jdean:2004,
+ author = {Dean, Jeffrey and Ghemawat, Sanjay},
+ title = {MapReduce: simplified data processing on large clusters},
+ booktitle = {Proceedings of the 6th conference on Symposium on Opearting Systems Design \& Implementation - Volume 6},
+ year = {2004},
+ location = {San Francisco, CA},
+ pages = {10--10},
+ numpages = {1},
+ url = {http://dl.acm.org/citation.cfm?id=1251254.1251264},
+ acmid = {1251264},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
 
 @misc{rfc3954,
   author="B. Claise",
