--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -67,8 +67,10 @@
     \begin{acronym}[UML]
         \acro{IPFIX}{Internet Protocol Flow Information Export}
         \acro{HDF}{Hierarchical Data Format}
-		\acro{LALR}{Look-Ahead LR Parser}
-		\acro{PLY}{Python Lex-Yacc}
+				\acro{LALR}{Look-Ahead LR Parser}
+				\acro{PLY}{Python Lex-Yacc}
+				\acro{HDFS}{Hadoop Distributed File System}
+				\acro{API}{Application Programming Interface}
     \end{acronym}                     
 \endgroup
 
