completed slicing inputs

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,3 +1,10 @@
+@unpublished{jschauer:2012,
+ author = {Schauer, Johannes and Melnikov, Nikolay and 
+		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
+ title = {{F}},
+ year = {2012},
+}
+
 @inproceedings{pmundkur:2011,
  author = {Mundkur, Prashanth and Tuulos, Ville and Flatow, Jared},
  title = {{Disco: A Computing Platform for Large-Scale Data Analytics}},
