completed flowy2 introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -23,6 +23,16 @@
  keywords = {MapReduce, cluster, data processing, distributed filesystems},
 }
 
+@mastersthesis{jschauer:thesis:2011,
+ author = {Schauer, Johannes},
+ title = {{Flowy 2.0: Fast Execution of Stream based IP Flow Queries}},
+ type = {Bachelor's Thesis},
+ month = {May},
+ school = {Jacobs University Bremen},
+ address = {Campus Ring 1, 28759 Bremen, Germany},
+ year = {2011},
+}
+
 @book{twhite:hadoop:2010,
   title={{Hadoop: The Definitive Guide}},
   author={White, T.},
