added performance issues and early improvements

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -23,6 +23,20 @@
  keywords = {MapReduce, cluster, data processing, distributed filesystems},
 }
 
+@article{sbehnel:2011,
+author={Behnel, S. and Bradshaw, R. and Citro, C. and Dalcin, L. and Seljebotn, D.S. and Smith, K.}, 
+journal={Computing in Science Engineering}, 
+title={{Cython: The Best of Both Worlds}}, 
+year={2011}, 
+month={march-april}, 
+volume={13}, 
+number={2}, 
+pages={31 -39}, 
+keywords={Cython language;Fortran code;Python language extension;numerical loops;programming language;C language;numerical analysis;}, 
+doi={10.1109/MCSE.2010.118}, 
+ISSN={1521-9615},
+}
+
 @mastersthesis{jschauer:thesis:2011,
  author = {Schauer, Johannes},
  title = {{Flowy 2.0: Fast Execution of Stream based IP Flow Queries}},
@@ -87,6 +101,29 @@ ISSN={},
  address = {Berlin, Heidelberg},
  keywords = {flow query language, netflow, network monitoring},
 } 
+
+@inproceedings{wilbers:2009,
+  author = {Wilbers, Ilmar and Langtangen, 
+						Hans Petter and {\O}deg{\r a}rd, {\r A}smund},
+  title = {{Using Cython to Speed up Numerical Python Programs}},
+  year = {2009},
+  booktitle = {Proceedings of MekIT'09},
+  editor = {B. Skallerud and H. I. Andersson},
+  pages = {495-512},
+  publisher = {Tapir},
+  organization = {NTNU},
+  isbn = {978-82-519-2421-4}
+}
+
+@inproceedings{dseljebotn:2009,
+  author = {Dag Sverre Seljebotn},
+  title = {{Fast numerical computations with Cython}},
+  booktitle = {Proceedings of the 8th Python in Science Conference},
+  pages = {15 - 22},
+  address = {Pasadena, CA USA},
+  year = {2009},
+  editor = {Ga\"el Varoquaux and St\'efan van der Walt and Jarrod Millman},
+}
 
 @mastersthesis{kkanev:thesis:2009,
  author = {Kanev, Kaloyan},
