completed future outlook

--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -71,6 +71,7 @@
 				\acro{PLY}{Python Lex-Yacc}
 				\acro{HDFS}{Hadoop Distributed File System}
 				\acro{API}{Application Programming Interface}
+				\acro{CNF}{Conjunctive Normal Form}
     \end{acronym}                     
 \endgroup
 
