removed legal consideration chapter, changed thesis title, changed titlepage layout, added {f, openflow} chapters

--- a/frontback/titlepage.tex
+++ b/frontback/titlepage.tex
@@ -5,11 +5,11 @@
         \hfill
         \vfill
         \begingroup
-            \color{Magenta}\spacedallcaps{\Huge{\myTitle}} \\ \bigskip
+            \color{Magenta}\Huge{\myTitle} \\ \bigskip
         		\color{Black}\mySubtitle \\ \bigskip
         \endgroup
 				\vfill
-        \spacedlowsmallcaps{\Large{\myName}}
+        \Large{\myName}
         \vfill
 
         \myDegree \\ \bigskip
