--- a/thesis-preamble.sty
+++ b/thesis-preamble.sty
@@ -8,7 +8,7 @@
 % ********************************************************************
 % Re-usable information
 % ********************************************************************
-\newcommand{\myTitle}{F\xspace}
+\newcommand{\myTitle}{F $(v2)$\xspace}
 \newcommand{\mySubtitle}{A complete system integration of 
 												 stream-based IP flow-record querier\xspace}
 \newcommand{\myDegree}{Masters Thesis\xspace}
