replaced flowy2-{benchmarks, profiling} figures with tables

--- a/frontback/titlepage.tex
+++ b/frontback/titlepage.tex
@@ -9,7 +9,7 @@
         		\color{Black}\mySubtitle \\ \bigskip
         \endgroup
 				\vfill
-        \Large{\myName}
+        \Large{\myName} \\ \bigskip
         \vfill
 
         \myDegree \\ \bigskip
@@ -17,7 +17,7 @@
         \myUni \\ 
 				\myLocation \\ \bigskip
 				\vfill
-				% Advisor: \myProf
+				
 				% \vfill
 				\myTime
     \end{center}  
