completed: flow signatures of popular applications

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,20 @@
  year = {2012},
 }
 
+@inproceedings{vperelman:2011,
+author={Perelman, V. and Melnikov, N. and Schonwalder, J.}, 
+booktitle={Integrated Network Management (IM), 2011 IFIP/IEEE International Symposium on}, 
+title={{Flow signatures of Popular Applications}}, 
+year={2011}, 
+month={may}, 
+volume={}, 
+number={}, 
+pages={9 -16}, 
+keywords={Web browser;configuration error;flow signature;hardware failure;intrusion attempt;mail client;media-player;network flow data;network flow traces;protocol mix;router;software failure;stream-based flow query language;digital signatures;online front-ends;protocols;query languages;security of data;system recovery;telecommunication network routing;telecommunication security;}, 
+doi={10.1109/INM.2011.5990668}, 
+ISSN={},
+}
+
 @inproceedings{pmundkur:2011,
  author = {Mundkur, Prashanth and Tuulos, Ville and Flatow, Jared},
  title = {{Disco: A Computing Platform for Large-Scale Data Analytics}},
@@ -70,6 +84,16 @@ pages={1 -10},
 keywords={Hadoop distributed file system;Yahoo!;data storage;data stream;enterprise data;Internet;distributed databases;network operating systems;}, 
 doi={10.1109/MSST.2010.5496972}, 
 ISSN={},
+}
+
+@mastersthesis{vperelman:thesis:2010,
+ author = {Perelman, Vladislav},
+ title = {{Flow signatures of Popular Applications}},
+ type = {Bachelor's Thesis},
+ month = {May},
+ school = {Jacobs University Bremen},
+ address = {Campus Ring 1, 28759 Bremen, Germany},
+ year = {2010},
 }
 
 @mastersthesis{pnemeth:thesis:2010,
@@ -163,6 +187,23 @@ ISSN={},
  keywords = {IPFIX, NetFlow, Network measurement},
 } 
 
+@techreport{draft-cheshire-nat-pmp-03,
+	address = {Fremont, CA, USA},
+	author = {Cheshire, Stuart and Krochmal, Marc and Sekar, Kiren},
+	howpublished = {Working Draft},
+	institution = {IETF Secretariat},
+	keywords = {bonjour, ietf, internetdraft, nat, nat-pmp, upnp, zeroconf},
+	month = apr,
+	number = {draft-cheshire-nat-pmp-03.txt},
+	posted-at = {2011-02-22 16:36:06},
+	priority = {4},
+	publisher = {IETF Secretariat},
+	title = {{NAT} Port Mapping Protocol ({NAT-PMP})},
+	type = {Internet-Draft},
+	url = {http://tools.ietf.org/id/draft-cheshire-nat-pmp-03.txt},
+	year = {2008}
+}
+
 @inproceedings{vmarinov:2008,
  author = {Marinov, Vladislav and Sch\"{o}nw\"{a}lder, J\"{u}rgen},
  title = {{Design of an IP Flow Record Query Language}},
@@ -195,6 +236,20 @@ ISSN={},
   month=jan,
   note="Updated by RFC 6313",
   url="http://www.ietf.org/rfc/rfc5102.txt",
+}
+
+@article{mbodlaender:2005,
+author={Bodlaender, M.P.}, 
+journal={Consumer Electronics, IEEE Transactions on}, 
+title={{UPnP 1.1 - Designing for Performance Compatibility}}, 
+year={2005}, 
+month={feb.}, 
+volume={51}, 
+number={1}, 
+pages={ 69 - 75}, 
+keywords={ Universal Plug and Play technology; network interoperability; networked consumer device;UPnP trade; 1.0 peer-2-peer home networking architecture; consumer electronics; open systems; peer-to-peer computing;}, 
+doi={10.1109/TCE.2005.1405701}, 
+ISSN={0098-3063},
 }
 
 @inproceedings{jdean:2004,
