--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -72,6 +72,9 @@
 				\acro{HDFS}{Hadoop Distributed File System}
 				\acro{API}{Application Programming Interface}
 				\acro{CNF}{Conjunctive Normal Form}
+				\acro{SSDP}{Simple Service Discovery Protocol}
+				\acro{UDP}{User Datagram Protocol}
+				\acro{NAT-PMP}{Network Address Translation Port Mapping Protocol}
     \end{acronym}                     
 \endgroup
 
