--- a/thesis.tex
+++ b/thesis.tex
@@ -2,6 +2,7 @@
                footinclude=true,cleardoublepage=empty,abstractoff,
                BCOR=5mm,paper=a4,fontsize=11pt,ngerman,american,]{scrreprt}
 \usepackage{thesis-preamble}
+\usepackage{pifont}
 \hypersetup{pdffitwindow=true}
 
 \begin{document}
