cybermetrics: added introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -61,6 +61,32 @@ ISSN={1521-9615},
  year = {2011},
 }
 
+@mastersthesis{nmelnikov:thesis:2010,
+author = {Melnikov, Nikolay},
+title = {{Cybermetrics: Identification of Users through Network Flow Analysis}},
+month = {August},
+school = {Jacobs University Bremen},
+address = {Campus Ring 1, 28759 Bremen, Germany},
+year = {2010},
+}
+
+@inproceedings{nmelnikov:2010,
+ author = {Melnikov, Nikolay and Sch\"{o}nw\"{a}lder, J\"{u}rgen},
+ title = {{Cybermetrics: User Identification through Network Flow Analysis}},
+ booktitle = {Proceedings of the Mechanisms for autonomous management of networks and services, and 4th international conference on Autonomous infrastructure, management and security},
+ series = {AIMS'10},
+ year = {2010},
+ isbn = {3-642-13985-X, 978-3-642-13985-7},
+ location = {Zurich, Switzerland},
+ pages = {167--170},
+ numpages = {4},
+ url = {http://dl.acm.org/citation.cfm?id=1875873.1875904},
+ acmid = {1875904},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+ keywords = {cybermetrics, network flow analysis, user identification},
+}
+
 @book{twhite:hadoop:2010,
   title={{Hadoop: The Definitive Guide}},
   author={White, T.},
@@ -238,6 +264,39 @@ ISSN={},
   url="http://www.ietf.org/rfc/rfc5102.txt",
 }
 
+@inproceedings{kchen:2007,
+ author = {Chen, Kuan-Ta and Hong, Li-Wen},
+ title = {{User identification based on Game-Play Activity Patterns}},
+ booktitle = {Proceedings of the 6th ACM SIGCOMM workshop on Network and System 
+							Support for Games},
+ series = {NetGames '07},
+ year = {2007},
+ isbn = {978-0-9804460-0-5},
+ location = {Melbourne, Australia},
+ pages = {7--12},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1326257.1326259},
+ doi = {http://doi.acm.org/10.1145/1326257.1326259},
+ acmid = {1326259},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Kullback-Leibler divergence, account hijacking, biometrical signatures, online games, user behavior},
+}
+
+@article{aahmed:2007,
+author={Ahmed, A.A.E. and Traore, I.}, 
+journal={IEEE Transactions on Dependable and Secure Computing}, 
+title={{A New Biometric Technology Based on Mouse Dynamics}}, 
+year={2007}, 
+month={July-Sept}, 
+volume={4}, 
+number={3}, 
+pages={165 -179}, 
+keywords={artificial neural network;biometric data flow;confusion matrix;mouse dynamics;receiver operating characteristic curve;biometrics (access control);mouse controllers (computers);neural nets;}, 
+doi={10.1109/TDSC.2007.70207}, 
+ISSN={1545-5971}
+}
+
 @article{mbodlaender:2005,
 author={Bodlaender, M.P.}, 
 journal={Consumer Electronics, IEEE Transactions on}, 
@@ -284,6 +343,25 @@ ISSN={0098-3063},
  title = {{PyTables: Processing And Analyzing Extremely Large Amounts Of Data In 
 		  Python}},
  year = {2003}
+}
+
+@article{fbergadano:2002,
+ author = {Bergadano, Francesco and Gunetti, Daniele and Picardi, Claudia},
+ title = {{User Authentication through Keystroke Dynamics}},
+ journal = {ACM Trans. Inf. Syst. Secur.},
+ volume = {5},
+ issue = {4},
+ month = {November},
+ year = {2002},
+ issn = {1094-9224},
+ pages = {367--397},
+ numpages = {31},
+ url = {http://doi.acm.org/10.1145/581271.581272},
+ doi = {http://doi.acm.org/10.1145/581271.581272},
+ acmid = {581272},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Biometric techniques, keystroke analysis},
 }
 
 @article{fallen:1983,
