--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -75,6 +75,8 @@
 				\acro{SSDP}{Simple Service Discovery Protocol}
 				\acro{UDP}{User Datagram Protocol}
 				\acro{NAT-PMP}{Network Address Translation Port Mapping Protocol}
+				\acro{ccTLD}{Country Code Top-Level Domain}
+
     \end{acronym}                     
 \endgroup
 
