--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -76,6 +76,7 @@
 				\acro{UDP}{User Datagram Protocol}
 				\acro{NAT-PMP}{Network Address Translation Port Mapping Protocol}
 				\acro{ccTLD}{Country Code Top-Level Domain}
+				\acro{HTTP}{Hypertext Transfer Protocol}
 
     \end{acronym}                     
 \endgroup
