ipv6transeval: added introduction

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -5,6 +5,40 @@
  year = {2012},
 }
 
+@unpublished{vbajpai:2012,
+ author = {Bajpai, Vaibhav and Melnikov, Nikolay and 
+		   		 Sch\"{o}nw\"{a}lder, J\"{u}rgen},
+ title = {{Automated Failure Identification under IPv6 Transition Mechanisms}},
+ year = {2012},
+}
+
+@misc{rfc6333,
+  author="A. Durand and R. Droms and J. Woodyatt and Y. Lee",
+  title="{{Dual-Stack Lite Broadband Deployments Following IPv4 Exhaustion}}",
+  series="Request for Comments",
+  number="6333",
+  howpublished="RFC 6333 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2011,
+  month=aug,
+  url="http://www.ietf.org/rfc/rfc6333.txt",
+}
+
+@misc{rfc6146,
+  author="M. Bagnulo and P. Matthews and I. van Beijnum",
+  title="{{Stateful NAT64: Network Address and Protocol Translation from IPv6
+ 					 Clients to IPv4 Servers}}",
+  series="Request for Comments",
+  number="6146",
+  howpublished="RFC 6146 (Proposed Standard)",
+  publisher="IETF",
+  organization="Internet Engineering Task Force",
+  year=2011,
+  month=apr,
+  url="http://www.ietf.org/rfc/rfc6146.txt",
+}
+
 @inproceedings{vperelman:2011,
 author={Perelman, V. and Melnikov, N. and Schonwalder, J.}, 
 booktitle={Integrated Network Management (IM), 2011 IFIP/IEEE International Symposium on}, 
