openflow: added motivation

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -186,6 +186,19 @@ ISSN={},
  keywords = {flow query language, netflow, network monitoring},
 } 
 
+@article{newscientist:2009,
+ author = {Daviss, Bennett},
+ title = {{Building a Crash-Proof Internet}},
+ journal = {New Scientist},
+ issue_date = {June. 2009},
+ volume = {26},
+ issue = {11},
+ month = {June},
+ year = {2009},
+ pages = {38-41},
+ numpages = {4},
+}
+
 @inproceedings{wilbers:2009,
   author = {Wilbers, Ilmar and Langtangen, 
 						Hans Petter and {\O}deg{\r a}rd, {\r A}smund},
@@ -245,6 +258,27 @@ ISSN={},
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
  keywords = {IPFIX, NetFlow, Network measurement},
+} 
+
+@article{nmckeown:2008,
+ author = {McKeown, Nick and Anderson, Tom and Balakrishnan, Hari and Parulkar,
+ 					 Guru and Peterson, Larry and Rexford, Jennifer and Shenker, Scott and
+ 					 Turner, Jonathan},
+ title = {{OpenFlow: Enabling Innovation in Campus Networks}},
+ journal = {SIGCOMM Computer Communications Review},
+ volume = {38},
+ issue = {2},
+ month = {March},
+ year = {2008},
+ issn = {0146-4833},
+ pages = {69--74},
+ numpages = {6},
+ url = {http://doi.acm.org/10.1145/1355734.1355746},
+ doi = {http://doi.acm.org/10.1145/1355734.1355746},
+ acmid = {1355746},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {ethernet switch, flow-based, virtualization},
 } 
 
 @techreport{draft-cheshire-nat-pmp-03,
