--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -77,7 +77,8 @@
 				\acro{NAT-PMP}{Network Address Translation Port Mapping Protocol}
 				\acro{ccTLD}{Country Code Top-Level Domain}
 				\acro{HTTP}{Hypertext Transfer Protocol}
-
+				\acro{IaaS}{Infrastructure as a Service}
+				\acro{NaaS}{Network as a Service}
     \end{acronym}                     
 \endgroup
 
