openflow: added programming flows

--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -79,6 +79,7 @@
 				\acro{HTTP}{Hypertext Transfer Protocol}
 				\acro{IaaS}{Infrastructure as a Service}
 				\acro{NaaS}{Network as a Service}
+				\acro{vLANs}{Virtual Local Area Networks}
     \end{acronym}                     
 \endgroup
 
