openflow: added software stack

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -12,6 +12,26 @@
  year = {2012},
 }
 
+@inproceedings{tbenson:2011,
+ author = {Benson, Theophilus and Akella, Aditya
+ 					 and Shaikh, Anees and Sahu, Sambit},
+ title = {{CloudNaaS: A Cloud Networking Platform for Enterprise Applications}},
+ booktitle = {Proceedings of the 2nd ACM Symposium on Cloud Computing},
+ series = {SOCC '11},
+ year = {2011},
+ isbn = {978-1-4503-0976-9},
+ location = {Cascais, Portugal},
+ pages = {8:1--8:13},
+ articleno = {8},
+ numpages = {13},
+ url = {http://doi.acm.org/10.1145/2038916.2038924},
+ doi = {http://doi.acm.org/10.1145/2038916.2038924},
+ acmid = {2038924},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {datacenter, virtual network},
+}
+
 @misc{rfc6333,
   author="A. Durand and R. Droms and J. Woodyatt and Y. Lee",
   title="{{Dual-Stack Lite Broadband Deployments Following IPv4 Exhaustion}}",
