--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -80,6 +80,8 @@
 				\acro{IaaS}{Infrastructure as a Service}
 				\acro{NaaS}{Network as a Service}
 				\acro{vLANs}{Virtual Local Area Networks}
+				\acro{ACLs}{Access Control Lists}
+				\acro{MPLS}{Multiprotocol Label Switching}
     \end{acronym}                     
 \endgroup
 
