spamflow: added introduction and spam classifier

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -12,6 +12,27 @@
  year = {2012},
 }
 
+@inproceedings{rbeverly:2011,
+  author = {Kakavelakis, Georgios and Beverly, Robert and Young, Joel},
+	title = {{Auto-learning of {SMTP} {TCP} 
+					 Transport-Layer Features for Spam and Abusive Message Detection}},
+  address = {Berkeley, CA, USA},
+  booktitle = {LISA 2011, 25th Large Installation
+							 System Administration Conference},
+  day = {4},
+  editor = {Limoncelli, Thomas A. and Hughes, Doug},
+  isbn = {978-931971-88-1},
+  keywords = {detection, machinelearning, spam, spamassassin, tcp, transport},
+  location = {Boston, MA, USA},
+  month = dec,
+  organization = {USENIX, LOPSA},
+  posted-at = {2011-12-30 22:38:03},
+  priority = {0},
+  publisher = {USENIX Association},
+  url = {http://rbeverly.net/research/papers/autolearn-lisa11.pdf},
+  year = {2011}
+}
+
 @inproceedings{tbenson:2011,
  author = {Benson, Theophilus and Akella, Aditya
  					 and Shaikh, Anees and Sahu, Sambit},
@@ -280,6 +301,15 @@ ISSN={},
  keywords = {IPFIX, NetFlow, Network measurement},
 } 
 
+@inproceedings{rbeverly:2008,
+  author = {Robert Beverly and Karen Sollins},
+  title = {{Exploiting Transport-Level Characteristics of Spam}},
+  booktitle = {{Proceedings of the Fifth Conference on 
+							  Email and Anti-Spam ({CEAS})}},
+  month = aug,
+  year = 2008
+}
+
 @article{nmckeown:2008,
  author = {McKeown, Nick and Anderson, Tom and Balakrishnan, Hari and Parulkar,
  					 Guru and Peterson, Larry and Rexford, Jennifer and Shenker, Scott and
@@ -450,6 +480,32 @@ ISSN={0098-3063},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {Biometric techniques, keystroke analysis},
+}
+
+@article{yyang:1997,
+	author = {Yiming Yang and Jan O. Pedersen},
+	title = {{A Comparative Study on Feature Selection in Text Categorization}},	
+	year = {1997},
+	location = {http://www.scientificcommons.org/42840458},
+	publisher = {Morgan Kaufmann Publishers},
+	url = {http://citeseerx.ist.psu.edu/viewdoc/summary?doi=?doi=10.1.1.32.9956},
+	institution = {CiteSeerX - Scientific Literature Digital Library and Search
+	 						   Engine [http://citeseerx.ist.psu.edu/oai2] (United States)},
+}
+
+@article{vvapnik:1995,
+   author = {Cortes, Corinna and Vapnik, Vladimir},
+   title = {{Support-Vector Networks}},
+   journal = {Machine Learning},
+   publisher = {Springer Netherlands},
+   issn = {0885-6125},
+   keyword = {Computer Science},
+   pages = {273-297},
+   volume = {20},
+   issue = {3},
+   url = {http://dx.doi.org/10.1007/BF00994018},
+   note = {10.1007/BF00994018},
+   year = {1995}
 }
 
 @article{fallen:1983,
