--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -74,6 +74,7 @@
 				\acro{CNF}{Conjunctive Normal Form}
 				\acro{SSDP}{Simple Service Discovery Protocol}
 				\acro{UDP}{User Datagram Protocol}
+				\acro{TCP}{Transmission Control Protocol}
 				\acro{NAT-PMP}{Network Address Translation Port Mapping Protocol}
 				\acro{ccTLD}{Country Code Top-Level Domain}
 				\acro{HTTP}{Hypertext Transfer Protocol}
@@ -82,6 +83,9 @@
 				\acro{vLANs}{Virtual Local Area Networks}
 				\acro{ACLs}{Access Control Lists}
 				\acro{MPLS}{Multiprotocol Label Switching}
+				\acro{RTT}{Round Trip Time}
+				\acro{SVMs}{Support Vector Machines}
+				\acro{FF}{Greedy Forward Fitting}
     \end{acronym}                     
 \endgroup
 
