spamflow: added flowy and spamflow

--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -86,6 +86,7 @@
 				\acro{RTT}{Round Trip Time}
 				\acro{SVMs}{Support Vector Machines}
 				\acro{FF}{Greedy Forward Fitting}
+				\acro{SMTP}{Simple Mail Transfer Protocol}
     \end{acronym}                     
 \endgroup
 
