--- a/frontback/contents.tex
+++ b/frontback/contents.tex
@@ -73,6 +73,7 @@
 				\acro{API}{Application Programming Interface}
 				\acro{CNF}{Conjunctive Normal Form}
 				\acro{SSDP}{Simple Service Discovery Protocol}
+				\acro{IP}{Internet Protocol}
 				\acro{UDP}{User Datagram Protocol}
 				\acro{TCP}{Transmission Control Protocol}
 				\acro{NAT-PMP}{Network Address Translation Port Mapping Protocol}
@@ -87,6 +88,9 @@
 				\acro{SVMs}{Support Vector Machines}
 				\acro{FF}{Greedy Forward Fitting}
 				\acro{SMTP}{Simple Mail Transfer Protocol}
+				\acro{DDoS}{Distributed Denial of Service}
+				\acro{CAPTCHA}{Completely Automated Public Turing 
+											 Test to Tell Computers and Humans Apart}
     \end{acronym}                     
 \endgroup
 
