--- a/bibliography.bib
+++ b/bibliography.bib
@@ -415,6 +415,14 @@ doi={10.1109/TDSC.2007.70207},
 ISSN={1545-5971}
 }
 
+@inproceedings{phaag:2006,
+ author = {Haag, Peter},
+ title = {{Netflow Tools NfSen and NFDUMP}},
+ booktitle = {{Proceedings of the 18th Annual FIRST conference}},
+ year = {2006},
+ location = {Baltimore, Maryland, USA},
+}
+
 @article{mbodlaender:2005,
 author={Bodlaender, M.P.}, 
 journal={Consumer Electronics, IEEE Transactions on}, 
@@ -480,6 +488,21 @@ ISSN={0098-3063},
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {Biometric techniques, keystroke analysis},
+}
+
+@inproceedings{sromig:2000,
+ author = {Romig, Steve},
+ title = {{The OSU Flow-tools Package and CISCO NetFlow Logs}},
+ booktitle = {Proceedings of the 14th
+ 							USENIX conference on System administration},
+ year = {2000},
+ location = {New Orleans, Louisiana},
+ pages = {291--304},
+ numpages = {14},
+ url = {http://dl.acm.org/citation.cfm?id=1045502.1045521},
+ acmid = {1045521},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
 }
 
 @article{yyang:1997,
